--- a/CSS/competence.css
+++ b/CSS/competence.css
@@ -37,3 +37,44 @@ nav button {
     border-radius: 30px;
     font-size: 15px;
 }
+article {
+    border-radius: 30px;
+    background-color: lightblue;
+    background-image: url('../Images/background_article.jpg');
+    background-size: cover;
+    margin: 80px;
+    display: flex;
+    align-items: center;
+    padding: 30px;
+}
+article .skill-box {
+    padding: 0px 5px 0px 5px;
+    width: 25%;
+    text-align: center;
+}
+article .skill-box h2{
+    width: min-content;
+    margin: auto;
+    text-align: center;
+    border-radius: 30px;
+    background-color: rgba(255, 255, 255, 0.35);
+    padding-left: 15px;
+    padding-right: 15px;
+}
+article .skill-box ul {
+    border: 1px solid black;
+    margin: 0;
+    margin-top: 10px;
+    text-align: left;
+}
+article .skill-box ul li {
+    background-color: rgba(255, 255, 255, 0.35);
+    padding-left: 5px;
+    padding-right: 5px;
+}
+article .skill-box h1 {
+    border-radius: 30px;
+    background-color: rgba(255, 255, 255, 0.35);
+    padding-left: 10px;
+    padding-right: 10px;
+}
