--- a/CSS/moi.css
+++ b/CSS/moi.css
@@ -37,3 +37,33 @@ nav button {
     border-radius: 30px;
     font-size: 15px;
 }
+article {
+    border-radius: 30px;
+    background-color: lightblue;
+    background-image: url('../Images/background_article.jpg');
+    background-size: cover;
+    margin: 80px;
+    display: flex;
+    align-items: center;
+    padding: 30px;
+}
+article .photo {
+    height: 70%;
+    width: 20%;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.35);
+}
+article section img {
+    height: 100%;
+    width: 100%;
+}
+article .texte_présentation {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 10px;
+    width: 100%;
+}
