--- a/CSS/projets.css
+++ b/CSS/projets.css
@@ -37,3 +37,39 @@ nav button {
     border-radius: 30px;
     font-size: 15px;
 }
+article {
+    border-radius: 30px;
+    background-color: lightblue;
+    background-image: url('../Images/background_article.jpg');
+    background-size: cover;
+    margin: auto;
+    margin-top: 80px;
+    width: 60%;
+    display: flex;
+    align-items: center;
+    padding: 30px;
+}
+article .first {
+    margin: auto;
+    padding: 0px 5px 0px 5px;
+    text-align: center;
+}
+article .first ul {
+    border: 1px solid black;
+    margin: 0;
+    margin-top: 10px;
+    text-align: left;
+}
+article .first ul li {
+    background-color: rgba(255, 255, 255, 0.35);
+    padding-left: 5px;
+    padding-right: 5px;
+}
+article .first h2 {
+    margin: auto;
+    width: fit-content;
+    border-radius: 30px;
+    background-color: rgba(255, 255, 255, 0.35);
+    padding-left: 10px;
+    padding-right: 10px;
+}
