--- a/CSS/projets.css
+++ b/CSS/projets.css
@@ -22,11 +22,13 @@ article .first ul {
     text-align: left;
 }
 article .first ul li {
+    font-size: 20px;
     background-color: rgba(255, 255, 255, 0.35);
     padding-left: 5px;
     padding-right: 5px;
 }
 article .first h2 {
+    font-size: 35px;
     margin: auto;
     width: fit-content;
     border-radius: 30px;
