--- a/CSS/projets.css
+++ b/CSS/projets.css
@@ -3,8 +3,7 @@ article {
     background-color: lightblue;
     background-image: url('../Images/background_article.jpg');
     background-size: cover;
-    margin: auto;
-    margin-top: 80px;
+    margin: 80px auto 80px auto;
     width: 60%;
     display: flex;
     align-items: center;
